--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="custom.js"></script>
 </head>
 <body>
-    
+    <button id="btn">Rock</button>
+    <button id="btn">Paper</button>
+    <button id="btn">Scissors</button>
 </body>
 </html>
