Changed button classes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="custom.js"></script>
 </head>
 <body>
-    <button id="btn">Rock</button>
-    <button id="btn">Paper</button>
-    <button id="btn">Scissors</button>
+    <button button-type = "rock" class="btn">Rock</button>
+    <button button-type = "paper" class="btn">Paper</button>
+    <button button-type = "scissors" class="btn">Scissors</button>
 </body>
 </html>
