Wrapped button classes in a div

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <script src="custom.js"></script>
 </head>
 <body>
-    <button button-type = "rock" class="btn">Rock</button>
-    <button button-type = "paper" class="btn">Paper</button>
-    <button button-type = "scissors" class="btn">Scissors</button>
+    <div>
+        <button button-type = "rock" class="btn">Rock</button>
+        <button button-type = "paper" class="btn">Paper</button>
+        <button button-type = "scissors" class="btn">Scissors</button>
+    </div>
+
 </body>
 </html>
