Add name to div class for buttons

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="custom.js"></script>
 </head>
 <body>
-    <div>
-        <button button-type = "rock" class="btn">Rock</button>
-        <button button-type = "paper" class="btn">Paper</button>
-        <button button-type = "scissors" class="btn">Scissors</button>
+    <div class = "container">
+        <button button-type = "rock" class = "btn">Rock</button>
+        <button button-type = "paper" class = "btn">Paper</button>
+        <button button-type = "scissors" class = "btn">Scissors</button>
     </div>
 
 </body>
