--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class = "container">
-        <button button-type = "rock" class = "btn">Rock</button>
-        <button button-type = "paper" class = "btn">Paper</button>
-        <button button-type = "scissors" class = "btn">Scissors</button>
+        <button class = "rock">Rock</button>
+        <button class = "paper">Paper</button>
+        <button class = "scissors">Scissors</button>
     </div>
 
 </body>
