--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <button class = "paper">Paper</button>
         <button class = "scissors">Scissors</button>
     </div>
-
+    <div class = "outcome">
+        
+    </div>
 </body>
 </html>
