Add score div tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <button class = "scissors">Scissors</button>
     </div>
     <div class = "outcome">
-
+    </div>
+    <div class = "score">
     </div>
     <script src="custom.js"></script>
 </body>
