Moved score to line 12

--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     
 </head>
 <body>
+    </div>
+    <div class = "score"></div>
     <div class = "container">
         <button class = "rock">Rock</button>
         <button class = "paper">Paper</button>
         <button class = "scissors">Scissors</button>
     </div>
-    <div class = "outcome">
-    </div>
-    <div class = "score">
-    </div>
+    <div class = "outcome"></div>
     <script src="custom.js"></script>
 </body>
 </html>
