Add div running score class & span children

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     
 </head>
 <body>
+    <div class = "running-score">
+        <span class = "player-score">Player Score: </span>
+        <span class = "computer-score">Computer Score: </span>
     </div>
     <div class = "container">
         <button class = "rock">Rock</button>
